spillelement og concept, flyttet bilder

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -37,24 +37,7 @@ intelligens. Man starter spillet med en øy og følgende elementer:
 	\item Muligheter for oppgraderinger av gjenvinningsstasjon slik at man også får gjenvinnet plast eller tre.
 \end{itemize}
 
-Jo flere typer ressurser man får gjenvinnet fra søppelet, jo flere muligheter har man for mer avanserte våpen, forsvar og oppgraderinger. Man starter med å kun gjenvinne papp. Figur XX viser mulighetene man har for å oppgradere resirkuleringssenteret slik at man får muligheten til å gjenvinne andre ressurser. For eksempel hvis man skal oppgradere til stål, må man først oppgradere til plast. For å oppgradere til titan kreves det at alle andre oppgraderinger allerede er utført. \\
-
-	\begin{figure} [H]
-				\begin{center}
-					\includegraphics[scale=0.5]{images/oppgraderingstre}
-				\end{center}
-			\caption{Ressursoppgraderinger}
-	\end{figure}
-		
-I tillegg til disse oppgraderingene har man også muligheten til å oppgradere gjenvinningseffektiviteten. Man har da følgende muligheter: \\
-
-		\begin{figure} [H]
-				\begin{center}
-					\includegraphics[scale=0.5]{images/effektivitet}
-				\end{center}
-			\caption{De ulike oppgraderingingene for effektivitet. Ved 10\% resirkuleringsgrad og 10 søppelenheter for man 1 enhet med ressurser per ressursoppgradering man har}
-		\end{figure}
-
+Jo flere typer ressurser man får gjenvinnet fra søppelet, jo flere muligheter har man for mer avanserte våpen, forsvar og oppgraderinger. (se kapittel om spillelement?)
 
 %tabellen virker ikke av en eller annen grunn.....må få det til å funke, bilde
 %brukt i stedet, men det er litt feil...
