Romersk nummerering av de første sidetallene.

--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -62,10 +62,12 @@
 
 %%% Begin document
 \begin{document}
+\pagenumbering{Roman}
 \include{title}
 \tableofcontents
 % Add the chapters
 \include{glossary}
+\pagenumbering{arabic}
 \include{intro}
 \include{problem}
 \include{process}
