--- a/konseptdokument/title.tex
+++ b/konseptdokument/title.tex
@@ -6,7 +6,7 @@
  
 % Upper part of the page
 
-\textsc{\LARGE Norwegian University of Science and Technology}\\[1.5cm]
+\textsc{\LARGE Norges Teknisk-Naturvitenskapelige Universitet}\\[1.5cm]
 
  
 \textsc{\Large EIT3014}\\[0.5cm]
