--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -9,7 +9,7 @@
 
 %bruk ord: MILJØSTASJON, GJENVINNING. (ikke gjenvinningstasjon, utvinne, resirkulering)
 
-\subsection{Elementer}
+\subsection{Elementer} \label{sec:spillelement}
 Dette avsnittet forteller om de forskjellige spillelementene som finnes
 i Garbage Alert.
 \subsubsection{Ressurser}
