--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -37,7 +37,7 @@ intelligens. Man starter spillet med en øy og følgende elementer:
 	\item Muligheter for oppgraderinger av gjenvinningsstasjon slik at man også får gjenvinnet plast eller tre.
 \end{itemize}
 
-Jo flere typer ressurser man får gjenvinnet fra søppelet, jo flere muligheter har man for mer avanserte våpen, forsvar og oppgraderinger. (se kapittel om spillelement?)
+Jo flere typer ressurser man får gjenvunnet fra søppelet, jo flere muligheter har man for mer avanserte våpen, forsvar og oppgraderinger (se seksjon \ref{sec:spillelement}).
 
 %De sentrale spillelementene består av å samle inn søppel til resikulerings vil være samling, %ressursforvaltning, valg av våpen og forsvar, samt timing av våpenbruk. Spillinnholdet vil hovedsaklig være Pure Play (Usikker på dette innebærer det jeg tror), der målet er å få spilleren til å ha det gøy, men det vil også være elementer av realisme da det spilleren foretar seg vil virke inn på både lokalt og globalt miljø. Det vil være en lineær spillsekvens (Er usikker på denne fordi jeg ikke finner noen  spillsekvenstype som passer??) der spilleren får tilgang til nye våpentyper og forsvarsmuligheter etterhvert som krav for hver enkelt oppgradering er nådd. For at spillet skal få et lekent og fristende utseende har vi valgt en type tegneseriestil som vil gjøre nettopp dette. (Husker ikke om vi har vi diskutert dette, og hva vi kom fram til?)\\
 
