Added the team name as independent file for inputting in the document. Added package for more WTF8

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -1,8 +1,13 @@
 %!TEX root = report.tex
 \section{Konsept og spillutforming}\label{sec:konsept}
-
+Dette kapittelet forteller om konseptet som ble utviklet, definisjoner
+og begrep som ble utviklet i forbindelse med spillet og selve
+spilldynamikken. I tillegg blir de ulike spillelementene forklart.
 \subsection{Introduksjon: Garbage Alert}
-
+Garbage Alert er strategispillet der du bestemmer verdens skjebne ved å
+gjenvinne og krige med søppel. Spillet har resirkulering i sentrum
+samtidige som det skal være et underholdende strategispill for deg
+mellom 9 og 99 år. 
 			\begin{figure} [here]
 				\begin{center}
 					\includegraphics[scale=0.5]{images/splashscreen}
@@ -10,15 +15,20 @@
 			\caption{Garbage Alert splash screen}
 		\end{figure}
 
-Garbage Alert er strategispillet der du bestemmer verdens skjebne ved å gjenvinne og krige med søppel. Spillet har resirkulering i sentrum samtidige som det skal være et underholdende strategispill for deg mellom 9 og 99 år. 
 
-Man starter på en øy overfyllt med søppel. Målet med spillet er å bli kvitt søppelet. Ved å gjenvinne avfallet får man ulike muligheter til å bombandere de andre spillerne, forsvare sin egen øy, for så å stå igjen som vinneren på en øy uten søppel, eller som eneste spiller i live.
+Man starter på en øy overfyllt med søppel. Målet med spillet er å bli
+kvitt søppelet. Ved å gjenvinne avfallet får man ulike muligheter til å
+bombandere de andre spillerne, forsvare sin egen øy, for så å stå igjen
+som vinneren på en øy uten søppel, eller som eneste spiller i live.
 
-Spillet er utviklet av en gruppe studenter på NTNU i faget Eksperter i Team. Spilldesignerne går under navnet Re3. Re3 består av Andreas Røysland Aarnes, Trond Kjetil Bremnes, Christian Aleksander Lysne, Kjetil Mehl og Ina Sander Pedersen.
+Spillet er utviklet av en gruppe studenter på NTNU i faget Eksperter i
+Team. Spilldesignerne går under navnet \input{re3}. \input{re3} består av Andreas
+Røysland Aarnes, Trond Kjetil Bremnes, Christian Aleksander Lysne,
+Kjetil Mehl og Ina Sander Pedersen.
 
-Målet med denne seksjonen er å gi deg et innblikk i det utviklede spillkonseptet, hvilke spillaspekter som er tatt med og spillets dynamikk.
-
-
+Målet med denne seksjonen er å gi deg et innblikk i det utviklede
+spillkonseptet, hvilke spillaspekter som er tatt med og spillets
+dynamikk.
 \input{definisjoner}
 \input{spillelement}
 \subsection{Spilldynamikken}
