--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -6,7 +6,7 @@
 
 %%% Preamble
 \documentclass[paper=a4, fontsize=12pt]{scrartcl}	% Article class of KOMA-script with 11pt font and a4 format
-\usepackage[english]{babel}														% English language/hyphenation
+\usepackage[norsk]{babel}														% English language/hyphenation
 \usepackage[protrusion=true,expansion=true]{microtype}				% Better typography
 \usepackage{amsmath,amsfonts,amsthm}										% Math packages
 \usepackage[pdftex]{graphicx}														% Enable pdflatex
@@ -17,6 +17,7 @@
 \usepackage{booktabs}																	% Nicer tables
 \usepackage[utf8]{inputenc} % We want UTF8
 \usepackage{url}
+\usepackage{textcomp}
 
 %%% Advanced verbatim environment
 \usepackage{verbatim}
