Figures are now referenced correctly.

--- a/konseptdokument/spillmatrise.tex
+++ b/konseptdokument/spillmatrise.tex
@@ -4,7 +4,7 @@
 % This should allow an easy cross reference for an elements in the game
 % that a value. 
 \subsection{Spillmatrisen}
-Spillmatrisen (se Figur~\cite{fig:spillmatrise}) er en grafisk forklaring
+Spillmatrisen (se Figur~\ref{fig:spillmatrise}) er en grafisk forklaring
 på hvilke elementer i spillet som interagerer med hverandre. Elementer
 som våpen, forsvar og oppgraderinger er kun beskrevet på et overordnet
 nivå, siden disse elementene deler like egenskaper (f.eks. at alle
@@ -12,11 +12,11 @@ angrep kan angripe forsvar).
 \begin{center}
 \begin{figure} [H]
 \includegraphics[scale=0.6]{images/spillmatrise.png}
-\label{fig:spillmatrise}
 \caption{Spillmatrise med de forskjellige elementene}
+\label{fig:spillmatrise}
 \end{figure}
 \end{center}
-I Figur~\cite{fig:spillmatrise} er elementene som interagerer er merket
+I Figur~\ref{fig:spillmatrise} er elementene som interagerer er merket
 med en \textbf{X} i den kollonnen og raden de elementene sammenfaller i.
 Hvordan elementene interagerer er beskrevet nedenfor:
 \begin{description}
