Removed page numbering for glossaries.

--- a/konseptdokument/glossary.tex
+++ b/konseptdokument/glossary.tex
@@ -1,5 +1,5 @@
 \printglossary[style=list]
-\addcontentsline{toc}{section}{Begreper}
+\addcontentsline{toc}{section}{Ordliste}
 \dictentry{SNES}{
 	Super Nintedo Entertainment System, Spillmaskin utgitt av Nintendo i 1992.
 }
