--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -77,7 +77,8 @@
 \include{tech}
 \include{genre}
 \include{artwork}
+\include{conclusion}
+\thispagestyle{empty}
 \bibliographystyle{plain}
 \bibliography{referanser}
-\include{conclusion}
 \end{document}
