--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -67,7 +67,7 @@
 \include{title}
 \tableofcontents
 % Add the chapters
-\include{glossary}
+\include{glossaries}
 \pagenumbering{arabic}
 \include{intro}
 \include{problem}
