We write in norwegian! :-)

--- a/prosessrapport/Rapport.tex
+++ b/prosessrapport/Rapport.tex
@@ -1,8 +1,9 @@
 % This template was grabbed from http://www.vel.co.nz
 
-\documentclass[12pt]{article}
+\documentclass[12pt,norsk,a4paper]{article}
 \usepackage{geometry}
 \usepackage{graphicx}
+\usepackage{babel}
 \usepackage{float}
 \usepackage{wrapfig}
 \usepackage{url}
@@ -11,9 +12,6 @@
 \geometry{a4paper}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % command to make the lines in title page
 \linespread{1.2}
-
-% Redefinere referansesaken
-\renewcommand{\refname}{Referanser}
 
 %%% BEGIN DOCUMENT
 \begin{document}
