--- a/prosessrapport/avslutning.tex
+++ b/prosessrapport/avslutning.tex
@@ -1,7 +1,44 @@
 \section{Avslutning}
-Avslutning
-Samle trådene
-Hvilke erfaringer tar den enkelte og gruppa med seg videre?
 
-hvordan har gruppen utviklet seg?
-hvordan var den faglige kompetansen fordelt? (kan muligens også flettes inn under et annet avsnitt)
+I løpet av semesteret med EiT synes vi selv at vi har hatt stor utviklig som gruppe, og at vi alle er blitt mer bevisst på både
+vår egen og andres rolle i ulike situasjoner. Gruppen er enig om at EiT har gitt mange erfaringer
+som hver enkelt av oss kan bringe videre, både til bruk i resten av studitiden og ikke minst i arbeidslivet. 
+
+
+Ut i fra tilbakemeldinger fra facilitator har vi som medlemmer i gruppen blitt mer bevisst på kommunikasjonsmønsteret 
+gjennom hele prosessen og utviklet evnen til å se hvilke endringer som kan gjøres for å flytte på et mønster 
+som ikke er tilfredsstillende. Vi har fått verdifulle 
+verktøy om hvordan en selv kan hjelpe gruppen framover med enkle grep og metoder, der det å innta 
+roller som man ser at gruppen kan dra nytte av ligger sentralt.
+
+I gjennom tiden med EiT har alle gruppens medlemmer måtte tenke over og bli bevisst på sin egen og andres rolle
+i gruppen, noe som har gjort at vi både som indivder og sammen som gruppe har hatt en jevn framgang og læringskurve.
+
+Fra øvelsen om Person-Gruppe Relasjon lærte gruppen at en ikke nødvendigvis har samme tanker om hvordan en selv
+oppfattes i en situasjon som det resten av gruppen har, og De Bonos Hatter har gitt gruppen et sterkt analyseverktøy 
+der det å gi tilbakemelding på spesifikke
+områder kan ufarliggjøres ved å ta på seg forskjellige roller. 
+
+Hvert enkelt av gruppemedlemmene har gjort følgende tanker om hva nettopp de vil ta med seg videre fra semesteret:
+\begin{description}
+\item[Andreas] \hfill \\
+
+\item[Christian] \hfill \\
+
+\item[Ina] \hfill \\
+Ina tar med seg en bedre innstilling til framtidig gruppearbeid og troen på at hvis man jobber for 
+det vil man kunne skape en gruppe med god dialog og et godt samspill. Hun føler at hun har lært mye fra de andre
+i gruppen både om nye dataprogrammer hun gjerne vil bruke i framtiden, og om seg selv som person.
+Ina er også blitt mer bevisst på hvordan hun oppfører seg i en gruppesituasjon og ser på semesteret med
+EiT som et svært lærerikt halvår.
+
+\item[Kjetil] \hfill \\
+
+\item[Trond] \hfill \\
+
+\end{description}
+Alle i gruppen føler at de gjennom prosessen har blitt hørt slik at hvert medlem føler eierskap og er stolt av det ferdige produktet. 
+En viktig grunn til dette er at gruppen gjennom hele prosessen har tatt hensyn til at medlemmene har forskjellig faglig bakgrunn og 
+at sluttproduktet skulle være et resultat av tverrfagligheten.
+
+
