--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -8,9 +8,11 @@ utvikle et spillkonsept og en eventuell prototype.
 Dokumentet er i hovedsak strukturert i 4 hoveddeler:
 \begin{enumerate}
 	\item Introduksjon (Avsnitt~\ref{sec:intro})
-	\item Konseptet (Avsnitt~\ref{sec:konsept})
-	\item Utforming (Avsnitt~\ref{sec:design})
+	\item Konsept og spillutforming (Avsnitt~\ref{sec:konsept})
 	\item Teknisk (Avsnitt~\ref{sec:teknisk})
+	\item Sjanger (Avsnitt~\ref{sec:genre})
+	\item Grafisk fremstilling (Avsnitt~\ref{sec:artwork})
+	\item Konklusjon (Avsnitt~\ref{sec:conclusion})
 \end{enumerate}
 Konseptdelen skal gi en overordnet forståelse for hva spillet handler
 om. Utformingdelen skal gi dypere innsikt i hvordan spillet er bygd opp,
