--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -32,7 +32,7 @@ Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av fasilit
 	Etter at vi ble observante på hvordan dette mønsteret var, tok vi en pause; for å tenke litt på andre ting, ta en kaffe, og reflektere litt over hvorfor det var slik. Det var ingen tvil om at aktiviteten på gruppen ble mer balansert etter denne pausen. Vi ble klar over hvem vi henvender oss til når vi snakker. Andreas sa senere at han begynte å ta dette i betrakning i senere diskusjoner, der han beveger blikket mer for å få visuell kontakt med alle på gruppen. Trond foreslo at man kan legge til spørsmål til gruppemedlemmene om de er enige eller uenige, og rette disse mot dem på gruppen som er mer passive. Ifølge Schwarz \cite{Schwarz} er det å invitere til drøfting av egne innspill en god måte å øke effektiviteten i gruppen på. Dette bidrar til å få mer kommunikasjon mellom alle på gruppen, og inkludere dem som kan være umotiverte og trøtte eller ikke kommuniserer like mye. 
 
 	% \subsection{Tittel} ?
-	Gruppen ble også bevisst på et annet problem under videre diskusjon om spillideen – selv om ideen utviklet seg raskt og det var stor enighet i gruppen, så vi allikevel at når vi satte oss ned og tegnet ut ideene på hvert vårt papir at flere av oss så for oss ganske forskjellige ting. Selv om kommunikasjonen så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster, var det likevel store forskjeller i hva de forskjellige medlemmene trodde vi diskuterte. Her har Schwarz en teori om at man ved å dele all relevant informasjon, og alltid spille med åpne kort og konsekent avdekke resonnementene bak de innspillene man kommer med, vil man bedre kunne hjelpe gruppen i å arbeide effektivt sammen. Ved å gå mer i dybden på det vi diskuterer, snakke om detaljer og å være klar over at vi tenker forskjellig fører videre til at slike misforståelser blir unngått. Det å kartlegge slike ulikheter kan også brukes som en fordel i gruppen. I neste avsnitt reflekteres det over denne situasjonen i forhold til gruppemedlemmenes ulike tankegang.
+	Gruppen ble også bevisst på et annet problem under videre diskusjon om spillideen – selv om ideen utviklet seg raskt og det var stor enighet i gruppen, så vi allikevel at når vi satte oss ned og tegnet ut ideene på hvert vårt papir at flere av oss så for oss ganske forskjellige ting. Selv om kommunikasjonen så ut til å fungere etter situasjonen om gruppens kommunikasjonsmønster, var det likevel store forskjeller i hva de forskjellige medlemmene trodde vi diskuterte. Her har Schwarz en teori om at man ved å dele all relevant informasjon, og alltid spille med åpne kort og konsekvent avdekke resonnementene bak de innspillene man kommer med, vil man bedre kunne hjelpe gruppen i å arbeide effektivt sammen. Ved å gå mer i dybden på det vi diskuterer, snakke om detaljer og å være klar over at vi tenker forskjellig fører videre til at slike misforståelser blir unngått. Det å kartlegge slike ulikheter kan også brukes som en fordel i gruppen. I neste avsnitt reflekteres det over denne situasjonen i forhold til gruppemedlemmenes ulike tankegang.
 
 	\subsection{Refleksjon} %johnson, kap 10
 	Johnson og Johnson \cite{Johnson} understreker i sin artikkel viktigheten av mangfold i en gruppe, at ulike personligheter er en forutsetning for at gruppen skal være velfungerende. Det at gruppens medlemmer tenker forskjellig kan virke frustrerende når man skaper en idé, men dersom gruppen klarer å kartlegge disse ulikhetene kan gruppemedlemmenes ulike tankegang bidra til å skape noe større og bredere enn hvis alle på gruppen hadde hatt helt lik tankegang. I vårt tilfelle er de personlige karaktererforskjellene blant annet kjønn, studieretning og ulike verdier og meninger, i tillegg til ulik erfaring og kunnskap. De på gruppen som studerer eller har studert datarelaterte emner, det vil si Kjetil, Trond og Christian, er noe mer likesinnede og har ofte like forestillinger under idéutviklingen. De tar hensyn til programmering og gjennomføring av spillet, noe som Andreas og Ina ikke tenker på, ettersom de ikke har noe kunnskap innen dette feltet. Ina og Andreas tar derimot andre ting i betrakning under idéutviklingen, hvor blant annet inkorporering av biologi og geologi i spillet står sentralt.
@@ -41,7 +41,7 @@ Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av fasilit
 	% Teori - erfaringer - forsettelse på den samme teorien blir litt rotete.
 	Dette fører til at når vi i situasjoner kommer frem til noe alle er enige i, betyr ikke dette at man alltid vet \emph{hva man er enige om}. Fordi gruppens medlemmer, på grunn av deres ulike erfaringer og (ubevisste) preferanser, har ulike bilder i tankene om hvordan de ser for seg denne ideen. Vi fant ut at dette var tilfelle. Så hvordan kan vi dra nytte av dette?
 
-	I utgangspunktet skulle man tro at en homogen gruppe som består av datastudenter er det optimale i gjennomførelsen av et slikt prosjekt. Johnson og Johnson nevner flere ulemper ved en lik gruppe. I denne situasjonen skal vi nevne en av disse ulempene. En slik gruppe kan mangle et bredt perspektiv. Kjetil, Trond og Christian ville antageligvis klart å lage et godt produkt, men med en homogen tankegang er det antageligvis mange ting de ikke ville ha tenkt på. Ina og Andreas, som ikke har kunnskaper innen programmering, ser på oppgaven i et annet perspektiv enn resten av gruppen. Selv om de har ikke noe å bidra med rent teknisk til resultatet, ser på ting annerledes og kaster lys over oppgaven på en måte datastudentene ikke tar i betrakning. Da vi prøvde å flette sammen hver persons synspunkt på hva vi trodde vi hadde kommet frem til, førte dette til at hele gruppen endret sin personlige idé over hva vi hadde diskutert og gjorde det om til gruppen sin idé. Dette resulterte i noe ingen på gruppen hadde sett for seg, men som alle var veldig fornøyde med.  Kjetil mente først at denne diskusjonen var sløsing med tid og så på dette som en unødvendig del av gruppearbeidet. Men den ideen gruppen satt igjen med på slutten av dagen fikk Kjetil til å tenke annerledes. Han ble overrasket over at hans eget syn på dataspillet vi utviklet ble såpass endret da de andre på gruppen fortalte hva de tenkte. 
+	I utgangspunktet skulle man tro at en homogen gruppe som består av datastudenter er det optimale i gjennomførelsen av et slikt prosjekt. Johnson og Johnson nevner flere ulemper ved en lik gruppe. I denne situasjonen skal vi nevne en av disse ulempene. En slik gruppe kan mangle et bredt perspektiv. Kjetil, Trond og Christian ville mest sannsynlig klart å lage et godt produkt, men med en homogen tankegang er det antageligvis mange ting de ikke ville ha tenkt på. Ina og Andreas, som ikke har kunnskaper innen programmering, ser på oppgaven i et annet perspektiv enn resten av gruppen. Selv om de ikke har noe å bidra med rent teknisk til resultatet, ser de på ting annerledes og kaster lys over oppgaven på en måte datastudentene ikke gjør. Da vi prøvde å flette sammen hver persons synspunkt på hva vi trodde vi hadde kommet frem til, førte dette til at hele gruppen endret sin personlige idé over hva vi hadde diskutert og gjorde det om til gruppen sin idé. Dette resulterte i noe ingen på gruppen hadde sett for seg, men som alle var veldig fornøyde med.  Kjetil mente først at denne diskusjonen var sløsing med tid og så på dette som en unødvendig del av gruppearbeidet. Men den ideen gruppen satt igjen med på slutten av dagen fikk Kjetil til å tenke annerledes. Han ble overrasket over at hans eget syn på dataspillet vi utviklet ble såpass endret da de andre på gruppen fortalte hva de tenkte. 
 
 
 	% Sette inn hvor det passer
@@ -115,7 +115,7 @@ Gruppen slet litt med å komme med innspill under den grønne hatten (kreativite
 
 
 \subsection{I sentrum av seks hatter}
-Det å få vårt eget prosjekt tatt i fra hverandre på denne måten var en lærerik affære. Det ble pekt på en del elementer som vi selv har diskutert mye tidligere, spesielt valget mellom det å implementere spillet som sanntid eller turbasert. Av de tilbakemeldinger vi fikk kunne det virke som om andre så for seg at spillet ville fungere bedre som et turbasert spill. Det var og spørsmål om spillets moral, og om spillet vårt egentlig ville være lærerikt. Det virket dog som vi hadde tenkt på det meste som ble kommentert, og vi føler vi har god kontroll. Alt i alt følte vi dog at tilbakemeldingene vi fikk var av en positiv art, noe vi følte oss svært fornøyde med. Vi var spesielt fornøyde med tilbakemeldinger fra den røde hatten. Det gikk igjen at intuisjonen til de andre i landsbyen var at vårt konsept virket spennende og at man ikke burde utvide det noe videre. Den grønne (kreativitet) og gule (muligheter) hatten kom med flere interessante innspill. Men ingen av tilbakemeldingene her var ting vi ikke hadde diskutert tidligere i prosessen. De kritiske tilbakemeldingene vi fikk fra den svarte hatten og spørsmål knyttet til prosessen fra den blå hatten handlet i større grad om hvordan vi skal klare å publisere ideen vår og konkurrere mot tilsvarende spill. Christian mente at dette egentlig var positive kommentarer, ettersom det viste at de andre i landsbyen hadde stor tro på idèen vår. 
+Det å få vårt eget prosjekt tatt i fra hverandre på denne måten var en lærerik affære. Det ble pekt på en del elementer som vi selv har diskutert mye tidligere, spesielt valget mellom det å implementere spillet som sanntid eller turbasert. Av de tilbakemeldinger vi fikk kunne det virke som om andre så for seg at spillet ville fungere bedre som et turbasert spill. Det var og spørsmål om spillets moral, og om spillet vårt egentlig ville være lærerikt. Det virket dog som vi hadde tenkt på det meste som ble kommentert, og vi føler vi har god kontroll. Alt i alt følte vi at tilbakemeldingene vi fikk var av en positiv art, noe vi følte oss svært fornøyde med. Vi var spesielt fornøyde med tilbakemeldinger fra den røde hatten. Det gikk igjen at intuisjonen til de andre i landsbyen var at vårt konsept virket spennende og at man ikke burde utvide det noe videre. Den grønne (kreativitet) og gule (muligheter) hatten kom med flere interessante innspill. Men ingen av tilbakemeldingene her var ting vi ikke hadde diskutert tidligere i prosessen. De kritiske tilbakemeldingene vi fikk fra den svarte hatten og spørsmål knyttet til prosessen fra den blå hatten handlet i større grad om hvordan vi skal klare å publisere ideen vår og konkurrere mot tilsvarende spill. Christian mente at dette egentlig var positive kommentarer, ettersom det viste at de andre i landsbyen hadde stor tro på idèen vår. 
 
 
 \subsection{Hvilke hatter har vi i gruppen?}
@@ -127,7 +127,7 @@ Trond syntes det var vanskelig å snevre inn sine tilbakemeldinger til en katego
 
 Kjetil likte best den rød hatten; å fortelle magefølelsen sin uten begrunnelse. Kjetil likte derimot ikke å ta på seg den kritiske rollen som en svart hatt, blant annet fordi han selv måtte være observant på å identifisere negative sider ved presentasjonene. Han likte heller ikke at folk visste at "nå skal den svarte hatten snakke", ettersom tilskuerne da forventer at han skal si noe negativt. De Bono beskriver dette som et av poengene med å metaforisk ha på seg en hatt. De andre skal vite hvilken rolle du har slik at du får oppmerksomheten rundt hvilken hatt du har på deg. 
 
-Ina deltok ikke på denne øvelsen, men har likevel prøvd å idenfisere seg selv som en av hattene. Hun stod mellom den hvite hatten og den gule hatten. Hun liker å ha et nøytralt syn og å fokusere på fakta og informasjon, samt snakke om muligheter og gi positive tilbakemeldinger. Hun liker ikke å være kritisk eller snakke om negative følelser, ettersom hun er redd for hva folk tenker om henne i slike situasjoner. De Bono legger vekt på at hattene vi metaforisk tar på oss er et kostyme som sjuler våre personligheter og kler oss ut som en bestemt person. Dermed kan man oppføre seg som den personen man har "kledd seg ut" som. Med dette i tankene mener Ina at hun kunne tatt på seg rollen som hvilken som helst hatt, men hun foretrekker den hvite og gule, ettersom dette reflekterer henne bedre i en dagligdags situasjon til vanlig.
+Ina deltok ikke på denne øvelsen, men har likevel prøvd å idenfisere seg selv som en av hattene. Hun stod mellom den hvite hatten og den gule hatten. Hun liker å ha et nøytralt syn og å fokusere på fakta og informasjon, samt snakke om muligheter og gi positive tilbakemeldinger. Hun liker ikke å være kritisk eller snakke om negative følelser, ettersom hun er redd for hva folk tenker om henne i slike situasjoner. De Bono legger vekt på at hattene vi metaforisk tar på oss er et kostyme som sjuler våre personligheter og kler oss ut som en bestemt person. Dermed kan man oppføre seg som den personen man har "kledd seg ut" som. Med dette i tankene mener Ina at hun kunne tatt på seg rollen som hvilken som helst hatt, men hun foretrekker den hvite og gule, ettersom dette reflekterer henne bedre i en dagligdags situasjon.
 
 Selv om vi ikke bruker denne øvelsen i gruppen, kan man se ut i fra hva gruppemedlemmene likte og ikke likte, hvilke personligheter som framkommer under en tilbakemeldingssituasjon eller diskusjon i gruppen. Gruppen er godt representert med deltakere som liker å være kritiske og fortelle om sine intuisjoner og følelser. Christian, Andreas og Kjetil faller i disse to kategoriene, som røde og svarte hatter. Trond er et godt kreativt samt kritisk bidrag, mens Ina liker best å snakke om informasjon og muligheter. Med dette er alle hattene, unntagen den blå, representert i gruppen. Dette er med til å bidra til en effektiv gruppe som får belyst idèer, muligheter og meninger fra forskjellig vinkler. 
 
