More coherent figure referencing.

--- a/prosessrapport/Rapport.tex
+++ b/prosessrapport/Rapport.tex
@@ -13,6 +13,11 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % command to make the lines in title page
 \linespread{1.2}
 
+% Less air using tables
+\setlength{\abovecaptionskip}{0.2cm}   % 0.5cm as an example
+\setlength{\belowcaptionskip}{0.2cm}   % 0.5cm as an example
+
+
 %%% BEGIN DOCUMENT
 \begin{document}
 \input{title.tex} % TITLE PAGE
