--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -1,20 +1,46 @@
 % 2 til 4 situasjonsfortellinger Teori og begreper flettes inn underveis Refleksjoner rundt situasjonene, både individ- og gruppenivå Aksjoner (tiltak/videreføre, reflektere)
 
 \section{Kommunikasjonsmønster} %gruppelogg 08.02 
-Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av fasilitator på hvordan kommunikasjonen i gruppen utartet seg. For å gå inn i dybden på dette kan det nevnes hvordan stemningen på gruppen var på starten av dagen. Onsdagen før fikk vi utviklet en idé som alle på gruppen var fornøyde med. Etter flere timers arbeid med dette hadde vi en oppsummering sammen med landsbyens leder for å oppdatere henne på hvordan vi lå an. Det viste seg at slik spillet var på dette stadiet var resirkulering ikke et stort nok fokus i spillet. Vi måtte derfor gjøre store konseptuelle endringer for å bedre kunne treffe landsbyens tema. Dette ble en dårlig avslutning på dagen, og motivasjonen sank betraktelig.
+Under en av gruppens diskusjoner 8. februar fikk vi en tilbakemelding av
+fasilitator på hvordan kommunikasjonen i gruppen utartet seg. For å gå
+inn i dybden på dette kan det nevnes hvordan stemningen på gruppen var
+på starten av dagen. Onsdagen før fikk vi utviklet en idé som alle på
+gruppen var fornøyde med. Etter flere timers arbeid med dette hadde vi
+en oppsummering sammen med landsbyens leder for å oppdatere henne på
+hvordan vi lå an. Det viste seg at slik spillet var på dette stadiet var
+resirkulering ikke et stort nok fokus i spillet. Vi måtte derfor gjøre
+store konseptuelle endringer for å bedre kunne treffe landsbyens tema.
+Dette ble en dårlig avslutning på dagen, og motivasjonen sank
+betraktelig.
 
-	\subsection{Demotivasjon til motivasjon}
-	Da vi møtte opp onsdag 8. februar var den generelle stemningen på gruppen at medlemmene var demotiverte. Det at ideen vår fra den foregående onsdagen føltes som bortkastet lå fortsatt i tankene til alle på gruppen. Kjetil nevnte at han var lite klar for å gå tilbake til start og gjennom nye idémyldringer, ettersom vi forrige gang endelig følte at vi hadde en idé som alle var fornøyde med. Dette utsagnet var ikke akkurat noe som bidro til en bedre start på dagen for resten av gruppen. Trond og Andreas tenkte at man bare må gjøre det beste ut av det, og de startet en diskusjon som gikk ut på å dekomponere ideen vår fra forrige gang. Kjetil kastet seg på, og motivasjonen hans økte når han innså at dette kanskje ikke var verdens undergang. Etter en periode med ny brainstorming videreutviklet og endret vi det vi jobbet med forrige onsdag. Lydnivået økte og motivasjonen på gruppen steg blant flere av medlemmene. En ny idé ble født.
+\subsection{Demotivasjon til motivasjon}
+Da vi møtte opp onsdag 8. februar var den generelle stemningen på
+gruppen at medlemmene var demotiverte. Det at ideen vår fra den
+foregående onsdagen føltes som bortkastet lå fortsatt i tankene til alle
+på gruppen. Kjetil nevnte at han var lite klar for å gå tilbake til
+start og gjennom nye idémyldringer, ettersom vi forrige gang endelig
+følte at vi hadde en idé som alle var fornøyde med. Dette utsagnet var
+ikke akkurat noe som bidro til en bedre start på dagen for resten av
+gruppen. Trond og Andreas tenkte at man bare må gjøre det beste ut av
+det, og de startet en diskusjon som gikk ut på å dekomponere ideen vår
+fra forrige gang. Kjetil kastet seg på, og motivasjonen hans økte når
+han innså at dette kanskje ikke var verdens undergang. Etter en periode
+med ny brainstorming videreutviklet og endret vi det vi jobbet med
+forrige onsdag. Lydnivået økte og motivasjonen på gruppen steg blant
+flere av medlemmene. En ny idé ble født.
 
-	\subsection{Individuelle oppfatninger}
-	Da Andreas følte at gruppen virkelig var i sving, kom fasilitator bort til gruppen med en skisse som viste hvordan kommunikasjonen på gruppen var.
+\subsection{Individuelle oppfatninger}
+Da Andreas følte at gruppen virkelig var i sving, kom fasilitator bort
+til gruppen med en skisse som viste hvordan kommunikasjonen på gruppen
+var. Denne skissen er gjengitt i Figur~\ref{fig:pattern}.
 
-			\begin{figure} [here]
-				\begin{center}
-					\includegraphics[scale=0.5]{communication}
-				\end{center}
-			\caption{Kommunikasjonsmønster}
-		\end{figure}
+\begin{figure} [here]
+	\begin{center}
+			\includegraphics[scale=0.5]{communication}
+	\end{center}
+	\caption{Kommunikasjonsmønster}
+	\label{fig:pattern}
+\end{figure}
 		
 %h	Place the float here, i.e., at the same point it occurs in the source text.
 %t	Position at the top of the page.
@@ -55,11 +81,21 @@ Ulike synspunkt og meninger, i tillegg til ulik faglig kompetanse og tankegang, 
 \section{De Bonos hatter} %gruppelogg 14.03
 14. mars hadde alle gruppene i landsbyen en midtveispresentasjon av prosjektet. Etter hver presentasjon skulle de andre gruppene ta på seg ulike roller ved bruk av metaforiske “hatter”, for så å evaluere presentasjonen og prosjektet til hver gruppe som fremførte. Denne tilbakemeldingsteknikken heter De Bonos hatter og er basert på Edward De Bonos' "Six Thinking Hats" \cite{bonos}
 
-Prinsippet går ut på at menneskehjernen tenker på ulike måter som kan bli delt inn i forskjellige kategorier. Under denne øvelsen blir hver gruppe fortalt på forhånd hvilken kategori de tilhører, for dermed å gi tilbakmeldinger fra ulike synspunkt. Dette kan bli brukt som et verktøy for å skape en mer effektiv diskusjon, ettersom man systematisk får tilbakemeldinger fra hver kategori. Dette sikrer ulike relevante innfallsvinkler og hindrer fastlåsing.
+Prinsippet går ut på at menneskehjernen tenker på ulike måter som kan
+bli delt inn i forskjellige kategorier. Under denne øvelsen blir hver
+gruppe fortalt på forhånd hvilken kategori de tilhører, for dermed å gi
+tilbakmeldinger fra ulike synspunkt. Dette kan bli brukt som et verktøy
+for å skape en mer effektiv diskusjon, ettersom man systematisk får
+tilbakemeldinger fra hver kategori. Dette sikrer ulike relevante
+innfallsvinkler og hindrer fastlåsing.
 
-Det er seks forskjellige kategorier man bevisst bruker i denne øvelsen, og hver av disse har fått tildelt en farget hatt som en metafor på de ulike tilstandene. De ulike kategoriene flettet inn i sitasjonen vår er:
+Det er seks forskjellige kategorier man bevisst bruker i denne øvelsen,
+og hver av disse har fått tildelt en farget hatt som en metafor på de
+ulike tilstandene. De ulike kategoriene flettet inn i sitasjonen vår er
+forklart i Tabell~\ref{tab:hats}.
 \\
-\\
+\begin{table} [H]
+\centering
 \begin{tabular}{| l | l |}
 \hline
 \bf{Farge} & \bf{Tilstand} \\
@@ -71,6 +107,9 @@ Svart hatt & Kritisk blikk \\
 Blå hatt & Prosessblikk \\
 \hline
 \end{tabular}
+\caption{De ulike hattene knyttet opp mot tilstand}
+\label{tab:hats}
+\end{table}
 
 \vspace{1.0em}
 
@@ -94,16 +133,19 @@ Blå hatt & Prosessblikk \\
 % Her må man tenke prosesstyring. Man skal kartlegge hvor langt gruppen har kommet i prosessen, hva som trengs å gjøre og hvordan man kan ta beslutninger for å komme i mål. \\
 % \end{description}
 
-		\begin{figure} [here]
-				\begin{center}
-					\includegraphics[scale=0.5]{debonos}
-				\end{center}
-			\caption{De Bonos hatter}
-		\end{figure}
-		
-		
-Gruppen som hadde presentasjon fikk etter tur tilbakemeldinger fra de forskjellige hattene. Dette var en bra måte for å få startet en diskusjon. Det var også et verktøy som bidro til å hjelpe gruppen med sitt videre arbeid på prosjektet. Hver gruppe fikk prøve seg som hver hatt. Videre gjennomgår vi de ulike situasjonen vi var i som hver hatt, og hvordan det føltes å gå inn i de forskjellige rollene.
-
+Gruppen som hadde presentasjon fikk etter tur tilbakemeldinger fra de
+forskjellige hattene. Dette var en bra måte for å få startet en
+diskusjon. Det var også et verktøy som bidro til å hjelpe gruppen med
+sitt videre arbeid på prosjektet. Hver gruppe fikk prøve seg som hver
+hatt. Videre gjennomgår vi de ulike situasjonen vi var i som hver hatt,
+og hvordan det føltes å gå inn i de forskjellige rollene.
+\begin{figure} [H]
+		\begin{center}
+			\includegraphics[scale=0.5]{debonos}
+		\end{center}
+	\caption{De Bonos hatter}
+	\label{fig:hats}
+\end{figure}
 \subsection{De ulike rollene}
 Under den første presentasjonsrunden ble vår gruppe tildelt den røde hatten (følelse og intuisjon). Vi var litt usikre på hvordan vi skulle håndtere dette, og hva vi skulle se etter under presentasjonen. Kjetil synes det ble litt rart å prøve å fokusere på spesifikke ting ved presentasjonen, men så i etterkant hvor nyttig dette var. Det var  kun Kjetil og Andreas som kom med uttalelser om sine følelser rundt presentasjonen. De andre på gruppen synes at det var vanskelig å fortelle hva en føler om en presentasjon. Men Andreas mente at man kun trengte å si det første man tenkte på, og at dette var en enkel oppgave. 
 
